# bmi-map

./: .pre-commit-config.yaml  LICENSE.md  README.md  bmi_map.py  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/bmi_map/: __main__.py  _bmi.py  _main.py  _mapper.py  _parameter.py  bmi_map.py
src/bmi_map/mappers/: c.py  cxx.py  fortran.py  python.py  sidl.py
tests/: array_test.py  cli_test.py  load_test.py  map_test.py
